syntax = "proto3";

package order_service;
option go_package = "genproto/order_service";


service OrderService {
    rpc Create(CreateOrderRequest) returns (Response) {}
    rpc Get(IdStrRequest) returns (Order) {}
    rpc List(ListOrderRequest) returns (ListOrderResponse) {}
    rpc Update(UpdateOrderRequest) returns (Response) {}
    rpc UpdateStatus(UpdateOrderStatusRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
    rpc GetOrderStatus( OrderIdRequest) returns (OrderStatusResponse){}

    rpc GetAllAcceptedOrders(IdRequest) returns (Order) {}
    rpc GetAllAcceptableOrders(IdRequest) returns (Order) {}

}

// order_type :: delivery and pick_up
// payment_type:: cash and card
message CreateOrderRequest {
    int32 client_id = 1;
    int32 branch_id = 2;
    string type = 3; // 
    string address = 4;
    int32 courier_id = 5;
    double price = 6;
    double delivery_price = 7;
    double discount = 8;
    string payment_type = 9;
}

message Order {
    int32 id = 1;
    string order_id = 2;
    int32 client_id = 3;
    int32 branch_id = 4;
    string type = 5; // 
    string address = 6;
    int32 courier_id = 7;
    double price = 8;
    double delivery_price = 9;
    double discount = 10;
    string status = 11;
    string payment_type = 12;
    string created_at = 13;
    string updated_at = 14;
}

message UpdateOrderRequest {
    int32 id = 1;
    string order_id = 2;
    int32 client_id = 3;
    int32 branch_id = 4;
    string type = 5; // 
    string address = 6;
    int32 courier_id = 7;
    double price = 8;
    double delivery_price = 9;
    double discount = 10;
    string status = 11;
    string payment_type = 12;
}

message UpdateOrderStatusRequest {
    string order_id = 2;
    string status = 3;
}

message ListOrderRequest {
    int32 limit = 1;
    int32 page = 2;
    string order_id = 3;
    int32 client_id = 4;
    int32 branch_id = 5;
    string delivery_type = 6;
    int32 courier_id = 7;
    double price_from = 8;
    double price_to = 9;
    string payment_type = 10;
}

message ListOrderResponse {
     repeated Order Orders = 1;
     int32 count = 2;
}

message Response {
    string message = 1;
}

message IdRequest {
    int32 id = 1;
}
message IdStrRequest {
    string id = 1;
}
message OrderIdRequest {
    string order_id = 1;
}
message OrderStatusResponse {
    string status = 1;
}

message OrderProducts {
    int32 order_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
    double price = 4;
}